# BetterAngle

./: .gitignore  BetterAngle_114.cpp  CHANGELOG.md  CMakeLists.txt  CrosshairOverlayTransparent.java  LICENSE  NEW_RELEASE_NOTES.md  Overlay_114.cpp  README.md  RELEASE_NOTES.md  VERSION  build.bat  fix_config.patch  fix_ctrl.patch  fix_state.patch  installer.iss  qml.qrc  reviewing tool launcher.bat  test_substr  test_substr.cpp  uninstall.cpp
.github/workflows/: msbuild.yml
assets/: resource.rc
betterangle/: agent.mcs.yml  settings.mcs.yml
betterangle/topics/: ConversationStart.mcs.yml  EndofConversation.mcs.yml  Escalate.mcs.yml  Fallback.mcs.yml  Goodbye.mcs.yml  Greeting.mcs.yml  MultipleTopicsMatched.mcs.yml  OnError.mcs.yml  ResetConversation.mcs.yml  Search.mcs.yml  Signin.mcs.yml  StartOver.mcs.yml  ThankYou.mcs.yml
include/shared/: BetterAngleBackend.h  Config.h  ControlPanel.h  Detector.h  EnhancedLogging.h  FirstTimeSetup.h  Input.h  Logic.h  Overlay.h  Profile.h  Startup.h  State.h  ThresholdWizard.h  Updater.h
legacy_python/: betterangle.py  obs_roi_debug.py
profiles/: Fortnite_Standard.json
remote_profiles/: manifest.json
scratch/: process_branding.py
scripts/: RefineAssets.py  ScrubBranding.py  bump_version.ps1  process_logo.py  update_logo.py
src/: clean_uninstaller.cpp
src/config_tool/: BetterAngleConfig.cpp
src/gui/: Dashboard.qml  FirstTimeSetup.qml  Splash.qml  main.qml  qmldir
src/main_app/: BetterAngle.cpp  ThresholdWizard.cpp
src/shared/: BetterAngleBackend.cpp  ControlPanel.cpp  Detector.cpp  EnhancedLogging.cpp  FirstTimeSetup.cpp  Input.cpp  Logic.cpp  Overlay.cpp  Profile.cpp  Remote.cpp  Startup.cpp  State.cpp  Updater.cpp  uninstall.cpp  uninstaller.cpp
